--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/3k7t34ftdpbd1.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zzz-boss-trends</title>
+
+    <!-- Discord Embed / OpenGraph -->
+    <meta property="og:title" content="ZZZ Boss HP Tracker" />
+    <meta property="og:description" content="ติดตามความส้นตีนของเลือดบอสในโหมด Deadly Assault ของเกม ZZZ!" />
+    <meta property="og:image" content="https://serensz.github.io/DA_HP_checker/3k7t34ftdpbd1.jpeg" />
+    <meta property="og:url" content="https://serensz.github.io/DA_HP_checker/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Discord embed border color -->
+    <meta name="theme-color" content="#FF8C00" /> <!-- New Eridu orange -->
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
