change icon + edit embed

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/3k7t34ftdpbd1.jpeg" />
+    <link rel="icon" type="image/jpeg" href="/anbycool.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zzz-boss-trends</title>
 
     <!-- Discord Embed / OpenGraph -->
     <meta property="og:title" content="ZZZ Boss HP Tracker" />
-    <meta property="og:description" content="ติดตามความส้นตีนของเลือดบอสในโหมด Deadly Assault ของเกม ZZZ!" />
-    <meta property="og:image" content="https://serensz.github.io/DA_HP_checker/3k7t34ftdpbd1.jpeg" />
+    <meta property="og:description" content="ติดตามความส้นตีนของเลือดบอสในโหมด Deadly Assault ของเกม ZZZ! (Biweekly Updated)" />
+    <meta property="og:image" content="https://serensz.github.io/DA_HP_checker/anbycool.png" />
     <meta property="og:url" content="https://serensz.github.io/DA_HP_checker/" />
     <meta property="og:type" content="website" />
 
